# Nodal

./: .gitignore  Cargo.toml  development.md  index.html  pubspec.yaml
.github/workflows/: ai_cr.yml  ci_checks.yml  deploy_page.yml
android/app/: build.gradle
assets/campaign/: campaign.json
docs/: NodalCampaign.drawio
nodalbevy/: Cargo.toml
nodalbevy/src/: main.rs  menu.rs  puzzle.rs
nodalflutter/: README.md
nodalflutter/lib/: flame_game.dart  main.dart
nodalflutter/linux/: CMakeLists.txt  my_application.cc
nodalflutter/test/: widget_test.dart
nodalgodot/: TextureButton.gd  icon.svg.import  mai3317.tmp  maiBCAB.tmp  mainscreen.gd  mainscreen.tscn  project.godot  puzzlescreen.gd  puzzlescreen.tscn
nodalgodot/background_imgs/: PASL_Maps_Image_v3.png.import  bottom_left_bg.png.import  bottom_right_bg.png.import  checkmark.png.import  crossed_lines_bg.png.import  horizontal_line_bg.png.import  side_bg.png.import  top_bg.png.import  top_left_bg.png.import  top_right_bg.png.import  vertical_line_bg.png.import
nodalgodot/button_imgs/: CheckAnswerBtn.png.import  MainScreenButton.png.import  StartGameBtn.png.import
nodalgodot/logic/: load_puzzle.gd
nodalgodot/puzzles/: level1.json
nodalgodot/sprite_imgs/: EmptyNode.png.import
src/: campaign.rs  game_node.rs  game_set.rs  main.rs  menu.rs  node_condition.rs  puzzle.rs  puzzle_manager.rs  splash.rs  texture.rs  texture_manager.rs  util.rs
src/backend/: api.rs
src/logic/: condition_checks.rs  connected_condition_checks.rs  connected_rule_checks.rs  mod.rs  node_condition_checks.rs  puzzle_manager.rs  rule_checks.rs  save_data_manager.rs  util.rs
src/objects/: mod.rs  (+8 more)
web/: index.html
(+125 files in other folders)
