[package]
name = "nodalbevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0" }
uuid = { version = "1.7.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
walkdir = { version = "2.3" }
bevy_prototype_lyon = { version = "0.11.0" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3